--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,3 @@
-.home-card-info{
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid #e5e9f2;
-
-}
 .home-card-header{
   border-bottom-width: 1px;
   padding: 12px;
@@ -15,15 +8,26 @@
 .home-card-body{
   p {
     font-size: 14px;
-    padding:0px;
+    padding:0px 0px 10px 10px;
     margin: 0px;
   }
 
 }
 .home-card-avatar{
-
+  text-align: center;
+  padding: 20px;
+  .avatar{
+    border-radius: 50%;
+    border: 2px solid #2C3C4C;
+    border-spacing: 2px;
+  }
 
 }
 .home-card-footer{
-
+  text-align: center;
+  padding: 20px;
+  a {
+    text-decoration: none;
+    color: #2C3C4C;
+  }
 }
