--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
 }
 .company-card {
   flex: 0 0 auto;
-  // align-items: center;
+  width: 180px;
   padding: 20px 20px;
   border-radius: 3px;
   transition: all 0.15s ease;
@@ -13,7 +13,7 @@
   font-size: 16px;
   margin-top: 0;
   margin: 0px 16px;
-  text-align: center;
+     text-align: center;
   a {
     text-decoration: none;
     color: black;
@@ -23,7 +23,6 @@
 /* Product image */
 .product-image {
   border-radius: 5px;
-  margin-right: 20px;
 }
 
 /* Hover effects */
@@ -33,4 +32,9 @@
 }
 .company-card:hover {
   color: #E6E6E6;
+}
+#creation-timeline-img{
+  padding-top: 24px;
+  margin-left: 5vw;
+  width: 700px;
 }
