--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,6 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400|Roboto:400");
+@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400");
 
 // Define fonts for body and headers
 
@@ -14,6 +15,7 @@
 // }
 // $my-font: "Font Name";
 
+
 /* --- Fonts --- */
 body {
   font-family: 'Roboto', sans-serif;
@@ -21,43 +23,42 @@ body {
 }
 
 h1 {
-  font-family: 'Lato', sans-serif;
-  color: #fc9600;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 36px;
   font-weight: 700;
 }
 
 h2 {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 24px;
   font-weight: normal;
 }
 
 h5 {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 26px;
   font-weight: normal;
 }
 p {
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: normal;
   /* Il faudrait une version à 300 */
 }
 a {
-  color: #fc9600;
+  color: #2C3C4C;
   text-decoration: none;
 }
 
 a:hover {
-  color: none;
+  color: #FEBB58;
   text-decoration: none;
 }
 
 a:visited {
-  color: none;
+  color: #FEBB58;
   text-decoration: none;
 }
 a:active {
-  color: none;
+  color: #FEBB58;
   text-decoration: none;
 }
