--- a/app/assets/stylesheets/components/_actionbox.scss
+++ b/app/assets/stylesheets/components/_actionbox.scss
@@ -1,8 +1,18 @@
 .boxes {
   display: flex;
   margin-top: 100px;
+  justify-content: space-around;
 }
-
+.club {
+  display: flex;
+  border: solid 2px #fc9600;
+  background-color: #eaeaea;
+  border-radius: 8px;
+  box-shadow: 1px 1px 1px #fc9600;
+  align-items: center;
+  margin: 15px;
+  padding: 4px 8px;
+}
 .mainactionbox {
   display: flex;
   border: solid 2px #fc9600;
@@ -44,4 +54,51 @@
 .huge {
   font-size: 60px !important;
   font-style: bold;
+}
+
+.tableau {
+  margin: 30px;
+  padding: 30px;
+}
+
+.liste {
+  width: 300px;
+}
+
+.club-item {
+  display: flex;
+}
+
+.gauche {
+  margin-left: 15px;
+}
+
+.doccard {
+  background-color: blue;
+  display: flex;
+  width: 150px;
+  height: 200px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px #fc9600;
+  background-color: #eaeaea;
+  margin: 20px;
+}
+
+.docs {
+  display: flex;
+
+}
+
+.doccard:hover {
+  cursor: pointer;
+  background-color: grey;
+}
+
+#etapes {
+  margin-top: 120px;
+  margin-bottom: 140px;
 }
