--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -23,19 +23,19 @@ body {
 }
 
 h1 {
-  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 36px;
   font-weight: 700;
 }
 
 h2 {
-  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 24px;
   font-weight: normal;
 }
 
 h5 {
-  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 26px;
   font-weight: normal;
 }
