--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,7 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400|Roboto:400");
 @import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400");
+@import url("https://fonts.googleapis.com/css?family=Lato");
 
 // Define fonts for body and headers
 
@@ -50,15 +51,15 @@ a {
 }
 
 a:hover {
-  color: #FEBB58;
+  color: #2C3C4C;
   text-decoration: none;
 }
 
 a:visited {
-  color: #FEBB58;
+  color: #2C3C4C;
   text-decoration: none;
 }
 a:active {
-  color: #FEBB58;
+  color: #2C3C4C;
   text-decoration: none;
 }
