le bon schema sur la compagnie

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,7 +2,7 @@
    <h3>Société <%= @company.name %></h3>
    <h5>Ici, vous trouverez tous les outils pour :</h5>
    <div>
-     <%= image_tag "operation-timeline.png", id: "operation-timeline-img" %>
+     <%= image_tag "company-creation-timeline.png", id: "company-creation-timeline-img" %>
    </div>
 </div>
 
