typed sur la landing

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -12,6 +12,10 @@
         <%= image_tag "logo.png", id: "superclosing-landing-logo" %>
       </div>
 
+      <div>
+        <h4 style="margin-bottom: 40px;">Votre levée de fonds <span id="typed_text"></span></h4>
+      </div>
+
         <%= link_to new_user_registration_path do %>
          <button type="button" class="btn btn-landing-signup">Lancez-vous</button>
       <% end %>
