--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -42,7 +42,7 @@
       <h5><strong>Un processus unifié et centralisé</strong></h5>
       <div class='landing-inner-text'>
         <p>
-          Une documentation juridique unique, un partage d’information transparent avec vos investisseurs, une information toujours à jour.
+          Une documentation juridique unique, un partage d’informations transparent avec vos investisseurs, une information toujours à jour.
         </p>
       </div>
     </div>
