front end fixes

--- a/app/assets/stylesheets/layouts/_main-layout.scss
+++ b/app/assets/stylesheets/layouts/_main-layout.scss
@@ -14,9 +14,9 @@
 }
 .page-content {
   padding: 0px 30px;
-  .row {
-    display: flex;
-  }
+  // .row {
+  //   display: flex;
+  // }
 }
 .page-header {
   margin-top: 16px;
