some layout stuff

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -6,7 +6,7 @@
    </div>
 </div>
 
-<div class='page-content'>
+<div class='container-fluid page-content'>
 
   <div class='row'>
 
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class ='col-xs-12 col-sm-3 '>
+    <div class ='col-xs-12 col-sm-3'>
       <div class='home-card'>
 
         <div class = 'home-card-header'>
